# brand-box

./: .gitignore  README.md  pyproject.toml
.github/instructions/: qa.instructions.md
docs/: b.html  c.html  refactor-handoff.md
src/brand_box/: __init__.py  cli.py  config.py  planner.py  project.py
src/brand_box/evaluators/: __init__.py  creative.py
src/brand_box/generators/: __init__.py  audio.py  identity.py  image_backend.py  kit.py  logo.py  manus_video.py  music.py  name.py  script.py  social.py  video.py  website.py
src/brand_box/models/: __init__.py  artifacts.py
tests/: test_cli_commands.py  test_planner_and_evaluators.py  test_project_roundtrip.py  test_selection_flow.py  test_video_assembler.py  test_video_assembler_helpers.py
